--- a/.github/workflows/unzip.yml
+++ b/.github/workflows/unzip.yml
@@ -6,24 +6,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: true  # Wichtig für Schreibrechte!
 
-      - name: Find and unzip ZIP files
+      - name: Unzip file and ignore Git metadata
         run: |
           mkdir -p unzipped_files
-          for zip_file in *.zip; do
-            if [ -f "$zip_file" ]; then
-              echo "➡ Entpacke $zip_file..."
-              unzip "$zip_file" -d "unzipped_files/${zip_file%.zip}"
-              rm "$zip_file"
-            fi
-          done
+          # -o: Überschreibt ohne Fragen
+          # -x: Schließt .git/* Dateien aus
+          unzip -o '*.zip' -d unzipped_files/ -x '*.git/*' '__MACOSX/*'
+          
+          # Lösche die ZIP-Datei nach dem Entpacken
+          rm -f *.zip
+
+          # Entferne eventuelle Git-Metadaten aus dem entpackten Inhalt
+          find unzipped_files/ -name '.git' -exec rm -rf {} + || true
 
       - name: Commit and Push
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add .
-          git commit -m "Automatisch ZIP-Datei entpackt" || echo "Keine Änderungen"
+          git status
+          git commit -m "Automatisch ZIP-Datei entpackt und bereinigt" || echo "Keine Änderungen"
           git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
