--- a/.github/workflows/unzip.yml
+++ b/.github/workflows/unzip.yml
@@ -1,32 +1,42 @@
-name: Unzip Uploaded ZIP Files
+name: Unzip and Process Files
 on: [push, workflow_dispatch]
 
+permissions:
+  contents: write  # Explizite Schreibberechtigung setzen
+
 jobs:
-  unzip:
+  process_zip:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v4
         with:
-          persist-credentials: true  # Wichtig für Schreibrechte!
+          fetch-depth: 0  # Für bessere Git-Historie
 
-      - name: Unzip file and ignore Git metadata
+      - name: Unzip Files
         run: |
-          mkdir -p unzipped_files
-          # -o: Überschreibt ohne Fragen
-          # -x: Schließt .git/* Dateien aus
-          unzip -o '*.zip' -d unzipped_files/ -x '*.git/*' '__MACOSX/*'
+          # Erstelle Zielordner
+          mkdir -p unzipped_content
           
-          # Lösche die ZIP-Datei nach dem Entpacken
-          rm -f *.zip
+          # Entpacke alle ZIPs und ignoriere macOS/Metadaten
+          find . -name "*.zip" -exec unzip -o {} -d unzipped_content \; -exec rm {} \;
+          
+          # Bereinige unerwünschte Dateien
+          find unzipped_content -name '.DS_Store' -delete
+          find unzipped_content -name '__MACOSX' -exec rm -rf {} +
+          find unzipped_content -name '.git' -exec rm -rf {} +
 
-          # Entferne eventuelle Git-Metadaten aus dem entpackten Inhalt
-          find unzipped_files/ -name '.git' -exec rm -rf {} + || true
-
-      - name: Commit and Push
+      - name: Commit Changes
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add .
-          git status
-          git commit -m "Automatisch ZIP-Datei entpackt und bereinigt" || echo "Keine Änderungen"
-          git push
+          
+          # Nur relevante Dateien hinzufügen
+          git add unzipped_content/
+          git rm *.zip || true
+          
+          git commit -m "Automatisch verarbeitet: ZIP entpackt und bereinigt" || echo "Keine Änderungen"
+          
+          # Authentifizierung mit Token
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+          git push origin HEAD:main
